# ZegoAITeacherDemo

./: CMakeLists.txt  CallbackImpl.cpp  CallbackImpl.h  ExternalRender.cpp  ExternalRender.h  README.md  build.sh  main.cpp  media_publisher_event_callback.cpp  media_publisher_event_callback.h  mp4convert.py  start.sh
include/: LiveRoom-Publisher.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomDefines.h  zego-api-defines.h  zego-api-media-publisher.h  zego-api-mix-stream.h
